Fix for tags overlapping divider line issue in "Filter by product category"
Issue fixed where tags are overlapping divider line in "Filter by product category".

--- a/plugins/woocommerce-blocks/assets/js/editor-components/search-list-control/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/editor-components/search-list-control/style.scss
@@ -83,6 +83,7 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		overflow: hidden;
 
 		li {
 			float: left;
